# rsomics-roc-auc

./: Cargo.toml  README.md
benches/: roc_auc.rs
src/: ap.rs  clf_curve.rs  cli.rs  io.rs  lib.rs  npsum.rs  roc.rs
tests/: compat.rs
tests/golden/: allneg_small.pr.expected  allneg_small.roc.expected  allneg_small.tsv  allpos_small.pr.expected  allpos_small.roc.expected  allpos_small.tsv  bal_mid.pr.expected  bal_mid.roc.expected  bal_mid.tsv  bal_noties.pr.expected  bal_noties.roc.expected  bal_noties.tsv  bal_small.pr.expected  bal_small.pr.repr  bal_small.roc.expected  bal_small.roc.repr  bal_small.tsv  expected_scalars.tsv  huge.pr.repr  huge.roc.repr  huge.tsv  imb_big.pr.expected  imb_big.roc.expected  imb_big.tsv  imb_mid.pr.expected  imb_mid.roc.expected  imb_mid.tsv  perfect.pr.repr  perfect.roc.repr  perfect.tsv  tiny.auc.repr  tiny.tsv
