[package]
name = "rsomics-roc-auc"
version = "0.1.1"
description = "ROC AUC, average precision, and the ROC / precision-recall curve points for binary classification — value-exact scikit-learn roc_auc_score / average_precision_score / roc_curve / precision_recall_curve equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-roc-auc"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["roc", "auc", "precision-recall", "metrics", "scikit-learn"]
readme = "README.md"

[[bin]]
name = "rsomics-roc-auc"
path = "src/main.rs"

[lib]
name = "rsomics_roc_auc"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "roc_auc"
harness = false
